--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,178 @@
     transform: rotate(360deg);
   }
 }
+
+h1, h2, h3, h4, h5, h6, p, ul {
+  margin: 0;
+}
+
+ul li {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+/* NAV STYLE */
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800');
+
+nav {
+  background-color: #fff;
+  height: 50px;
+  display: flex;
+  border-bottom: 1px solid #ccc;
+}
+
+nav a:link, nav a:active, nav a:visited {
+
+  font-weight: 800;
+  text-decoration: none;
+  color: #444;
+}
+
+nav a:hover {
+  color: #174276;
+  padding-bottom: 1px;
+  border-bottom: 1px solid #174276;
+}
+
+/* .navLink {
+  width: 100px;
+} */
+.navLink {
+  width: 100px;
+  padding-top: 15px;
+}
+
+.profilePhoto {
+  position: absolute;
+  right: 20px;
+}
+
+.photo {
+  width: 30px;
+  margin-top: 10px;
+}
+
+body {
+  height: 100vh;
+  font-family: 'Nanum Gothic', sans-serif;
+}
+
+/* MAIN */
+section:last-child {
+  border-bottom: 0px;
+}
+
+/* ABOUT */
+
+.about {
+  width: 960px;
+  margin: auto;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  min-height: 50vh;
+}
+
+/* FAQ */
+.faq-section {
+  background-color: #f0f0f0;
+}
+
+.faq {
+  min-height: 50vh;
+  width: 960px;
+  margin: auto;
+}
+
+.faq h2 {
+  padding: 40px 0;
+  font-weight: 800;
+  /* border-bottom: 1px solid #ccc; */
+}
+
+.faq h3 {
+  padding: 30px 0 10px;
+  border-top: 1px solid #ccc;
+}
+
+.faq p {
+  width: 700px;
+  margin: auto;
+  padding: 0 0 30px 0;
+}
+
+/* SECTION */
+
+section {
+  border-bottom: 1px solid #ccc;
+  min-height: 50vh;
+  background-color: #fff;
+}
+
+/* FOOTER */
+
+footer {
+  border-top: 3px solid #ccc;
+  background-color: #999;
+  color: #fff;
+  height: 150px;
+}
+
+/* DOCTOR CARD */
+
+.doctor-container a {
+  opacity: .8;
+  transition: 0.5s;
+}
+
+.doctor-container a:link, .doctor-container a:visited, .doctor-container a:active {
+  color: #000;
+  text-decoration: none;
+}
+
+.doctor-container a:hover {
+  background-color: #dfdfdf;
+  opacity: 1;
+}
+
+.doctor-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 960px;
+  margin: auto;
+  border-bottom: 0px;
+}
+
+.doctor-card {
+  width: 400px;
+  border: 1px solid #ccc;
+  padding: 20px;
+}
+
+.doctor-container a {
+  margin: 20px auto;
+}
+
+.doctor-card h3 {
+  padding-top: 20px;
+}
+
+/* SIGNUP AND LOGIN */
+
+.signup-section {
+
+}
+
+.signup-section h1 {
+  padding: 20px 0;
+}
+
+.form {
+  margin: 3px 0;
+  width: 250px;
+  height: 20px;
+}
+
+.signup-inner {
+  padding: 20px;
+}
