--- a/src/App.css
+++ b/src/App.css
@@ -187,6 +187,14 @@ footer {
   padding-top: 20px;
 }
 
+.doctor-show h1 {
+  padding-top: 30px;
+}
+
+.doctor-show p {
+  padding: 10px 0;
+}
+
 /* SIGNUP AND LOGIN */
 
 .signup-section {
